# conduit

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SYSTEM_DESIGN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/tests/: migrations.rs
apps/desktop/src/application/: useAppInfo.ts
apps/desktop/src/infrastructure/tauri/: appInfo.ts
apps/desktop/src/presentation/: AppLayout.tsx  router.tsx
apps/desktop/src/presentation/pages/: RelayPage.tsx  ServicesPage.tsx  WorkspacesPage.tsx
crates/relay/: Cargo.toml
crates/relay-peer/: Cargo.toml
crates/relay-peer/src/: main.rs
crates/relay/migrations/: 0001_initial_schema.sql
crates/relay/src/: main.rs
crates/relay/tests/: migrations.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  ids.rs  lib.rs  status.rs
docs/: IDEAS.md
