[package]
name = "conduit-app"
description = "Conduit desktop application — Tauri core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The Tauri 2 convention: a library crate holding the app logic plus a thin
# binary that calls into it (keeps the mobile entry point reusable).
[lib]
name = "conduit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conduit-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
# `conduit-shared` is wired in Phase 2 when workspace/service domain types are
# needed by the Tauri commands.

[dev-dependencies]
# Used by tests/migrations.rs to verify the embedded migrations apply cleanly.
# Promoted to a runtime dependency when persistence lands (Phase 2).
sqlx = { workspace = true }
tokio = { workspace = true }
